# libBigWig

./: .gitignore  .travis.yml  BigWigIO.h  CMakeLists.txt  Makefile  README.md  bigWig.h  bigWigIO.h  bwRead.c  bwStats.c  bwValues.c  bwWrite.c  io.c  io.h
.github/workflows/: artifacts.yml  build.yml  environmentLinux.yaml  example.yml
docs/html/: BigWigIO_8h.html  BigWigIO_8h_source.html  annotated.html  bigWigIO_8h.html  bigWigIO_8h_source.html  bigWig_8h.html  bigWig_8h_source.html  bwCommon_8h.html  bwCommon_8h_source.html  bwValues_8h.html  bwValues_8h_source.html  classes.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  globals_vars.html  index.html  io_8h.html  io_8h_source.html  md_README.html  menudata.js  pages.html  structURL__t.html  structbbOverlappingEntries__t.html  structbigWigFile__t.html  structbigWigHdr__t.html  structbwDataHeader__t.html  structbwLL.html  structbwOverlapBlock__t.html  structbwOverlapIterator__t.html  structbwOverlappingIntervals__t.html  structbwRTreeNode__t.html  structbwRTree__t.html  structbwWriteBuffer__t.html  (+4 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  files_0.js  functions_0.js  functions_1.js  pages_0.js  (+25 more)
test/: CMakeLists.txt  exampleWrite.c  test.c  test.py  testBigBed.c  testFiles.c  testHTTPUCSC.c  testIterator.c  testLocal.c  testRemote.c  testRemoteManyContigs.c  testValues.c  testWrite.c
